After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 619385 - Fix compilation warning: Do not break strict-aliasing rules
Fix compilation warning: Do not break strict-aliasing rules
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Backend: X11
2.90.x
Other Linux
: Normal minor
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2010-05-22 20:46 UTC by Javier Jardón (IRC: jjardon)
Modified: 2010-05-22 21:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Do not break strict-aliasing rules (2.64 KB, patch)
2010-05-22 20:48 UTC, Javier Jardón (IRC: jjardon)
committed Details | Review

Description Javier Jardón (IRC: jjardon) 2010-05-22 20:46:38 UTC
Patch following
Comment 1 Javier Jardón (IRC: jjardon) 2010-05-22 20:48:25 UTC
Created attachment 161742 [details] [review]
Do not break strict-aliasing rules

I'm not very sure about the name for the union: Is it GdkNotifyEvent a correct name?
Comment 2 Benjamin Otte (Company) 2010-05-22 20:58:36 UTC
I don't like the name either - is GdkXEvent already taken?
If it is, feel free to push it if it fixes warnings.
Comment 3 Javier Jardón (IRC: jjardon) 2010-05-22 21:19:27 UTC
Comment on attachment 161742 [details] [review]
Do not break strict-aliasing rules

Yeah GdkXEvent is taken.

commit 5917eba911616a6a3b7967e807e786307c01a559
Comment 4 Javier Jardón (IRC: jjardon) 2010-05-22 21:19:53 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release.

Thanks Benjamin for the review.