gdkevents-x11: Do not break strict-aliasing rules

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=619385